# pypresence

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pypresence.py  pyproject.toml  setup.cfg  setup.py  test.py  time-elapsed-example.py  tox.ini
.github/workflows/: lint_python.yml  publish-to-pypi.yml  test.yml  tox.yml
docs/: default.html  index.html
docs/doctrees/: activity.doctree  client.doctree  environment.pickle  index.doctree  presence.doctree
docs/doctrees/doc/: activity.doctree  client.doctree  presence.doctree
docs/doctrees/info/: about.doctree  changelog.doctree  examples.doctree  quickstart.doctree
docs/html/: .buildinfo  .buildinfo.bak  activity.html  client.html  genindex.html  index.html  objects.inv  presence.html  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_modules/pypresence/: baseclient.html  presence.html
docs/html/_sources/: activity.rst.txt  client.rst.txt  index.rst.txt  presence.rst.txt
docs/html/_sources/doc/: activity.rst.txt  client.rst.txt  presence.rst.txt
docs/html/_sources/info/: about.rst.txt  changelog.rst.txt  examples.rst.txt  quickstart.rst.txt
docs/html/_static/: alabaster.css  basic.css  custom.css  documentation_options.js  language_data.js  pygments.css
docs/html/_static/css/: theme.css
docs/html/_static/js/: theme.js
docs/html/doc/: activity.html  client.html  presence.html
docs/html/info/: about.html  changelog.html  examples.html  quickstart.html
docs/sphinx/: conf.py  index.rst  make.bat
docs/sphinx/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/sphinx/_build/.doctrees/: environment.pickle  index.doctree
docs/sphinx/_build/doc/: client.html  (+1 more)
docs/sphinx/_static/: custom.css
docs/sphinx/doc/: activity.rst  client.rst  client.rst.backup  presence.rst
docs/sphinx/info/: changelog.rst  examples.rst  quickstart.rst
examples/: activity-cpu-usage.py  buttons.py  client-authorize-example.md  cpu_stat+time_immage - Copy.py  discordrpc.py  examples.md  full-event-client-example.py  handling-reconnections.py  help.md  images.py  presence-test.py  quotes.py  requirements.txt  rich-presence-cpu-usage.py  rich-presence-custom-name.py  rich-presence-get-request.py  rich-presence-gifs.py  rich-presence-images.py  rich-presence-loop.py  rich-presence-music-async.py  rich-presence-music.py  rich-presence-program-detection.py  rich-presence-with-urls.py  rich-presence.py  test.py  time-elapsed-example.py  windows-multimedia-example.py
pypresence/: __init__.py  activity.py  baseclient.py  client.py  exceptions.py  payloads.py  pllist.NEKO  presence.py  pypresence.py  response.py  types.py  utils.py
pypresence.egg-info/: PKG-INFO  SOURCES.txt
tests/: README.md  __init__.py  basic_presence_test.py  conftest.py  test_baseclient.py  test_exceptions.py  test_payloads.py  test_presence.py  test_types.py  test_utils.py
(+13 files in other folders)
